--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -2,7 +2,10 @@ FROM maven:3.8.4-openjdk-17-slim AS builder
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
-RUN mvn clean package -DskipTests
+COPY .mvn ./.mvn
+COPY mvnw .
+RUN chmod +x mvnw
+RUN ./mvn clean package -DskipTests
 
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
